crates/jsonschema-codegen/tests/ui/invalid_type_array_element.rs
#[jsonschema::validator(schema = r#"{"type":["string",42]}"#)]
struct Validator;

fn main() {}
